--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2>A little bit about me and my interests:</h2>
                 <p>I have been hacking on things since 2011. Feel free to poke around my Github for my open source personal projects and contributions. Some of the things I enjoy most are <b>open source, strong typing, network engineering, compiler and programming language work, working with operating systems, security, and writing internal tooling.</b>
                 <p>I am mostly self taught with a couple of years of a computer science degree sprinkled in there and feel very strongly that we need to foster technical literacy in an open and inclusive manner. As technology becomes further integrated into our day to day lives, it is that much more important to focus on communicating in an empathetic and easily understood way to those less experienced and to resist the temptation to fall back on exclusive forms of conversation.</p>
-                <p>I can be reached personally through this <a href=/contact">contact</a> link.</p>
+                <p>I can be reached personally through this <a href="contact.html">contact</a> link.</p>
             </div>
         </div>
     </body>
