Better-ish website - still can't CSS like a pro

--- a/contact.html
+++ b/contact.html
@@ -3,21 +3,42 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="index.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cutive Mono">
-        <title>Homepage</title>
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono">
+        <title>Contact</title>
     </head>
     <body>
         <div class="banner">
             <a href="https://github.com/jbaublitz">
-                <img src="GitHub-Mark-64px.png">
+                <img src="GitHub-Mark-Light-64px.png">
             </a>
         </div>
-        <div class="center-panel-container">
-            <h1>jbaublitz.me</h1>
+        <div class="body-panel"></div>
+        <div class="center-panel-container body-panel">
+            <a href="index.html">
+                <h1>jbaublitz.me</h1>
+            </a>
             <div class="center-panel">
-                <p><b>IRC:</b> jbaublitzzz</p>
-                <p><b>Email:</b> john.m.baublitz@gmail.com</p>
+                <div class="contact-type">
+                    <p><b>Freenode IRC handle:</b></p>
+                </div>
+                <div class="contact-info">
+                    <p>jbaublitzzz</p>
+                </div>
+                <div class="contact-type">
+                    <p><b>Email:</b></p>
+                </div>
+                <div class="contact-info">
+                    <p>john.m.baublitz@gmail.com</p>
+                </div>
+                <div class="contact-type">
+                    <p><b>Github:</b></p>
+                </div>
+                <div class="contact-info">
+                    <p><a href="https://github.com/jbaublitz">https://github.com/jbaublitz</a></p>
+                </div>
             </div>
         </div>
+        <div class="body-panel"></div>
     </body>
 </html>
