--- a/index.html
+++ b/index.html
@@ -3,27 +3,43 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="index.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cutive Mono">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono">
         <title>Homepage</title>
     </head>
     <body>
         <div class="banner">
             <a href="https://github.com/jbaublitz">
-                <img src="GitHub-Mark-64px.png">
+                <img src="GitHub-Mark-Light-64px.png">
             </a>
         </div>
-        <div class="center-panel-container">
-            <h1>jbaublitz.me</h1>
+        <div class="body-panel"></div>
+        <div class="center-panel-container body-panel">
+            <a href="index.html">
+                <h1>jbaublitz.me</h1>
+            </a>
             <div class="center-panel">
                 <h1>Hi there! Thanks for dropping by.</h1>
                 <h2>I'm John Baublitz</br>
                 and I do the open source thing.</h2>
                 <div class="padding"></div>
                 <h2>A little bit about me and my interests:</h2>
-                <p>I have been hacking on things since 2011. Feel free to poke around my Github for my open source personal projects and contributions. Some of the things I enjoy most are <b>open source, strong typing, network engineering, compiler and programming language work, working with operating systems, security, and writing internal tooling.</b>
-                <p>I am mostly self taught with a couple of years of a computer science degree sprinkled in there and feel very strongly that we need to foster technical literacy in an open and inclusive manner. As technology becomes further integrated into our day to day lives, it is that much more important to focus on communicating in an empathetic and easily understood way to those less experienced and to resist the temptation to fall back on exclusive forms of conversation.</p>
-                <p>I can be reached personally through this <a href="contact.html">contact</a> link.</p>
+                <p>I have been hacking on things since 2011. Feel free to poke around my Github for my open source personal projects and contributions. Some of the things I enjoy most are:</p>
+                <div class="interests">
+                    <div class="padding"></div>
+                    <div class="text">
+                        <p><b>open source, strong typing, network engineering, compiler and programming language work, working with operating systems, security, and writing tooling</b></p>
+                    </div>
+                    <div class="padding"></div>
+                </div>
+                <div class="links">
+                    <p>For my personal approach to being a human in tech, <a href="humans.html">click here</a>.</p>
+                </div>
+                <div class="links">
+                    <p>I can be reached personally through this <a href="contact.html">contact</a> link.</p>
+                </div>
             </div>
         </div>
+        <div class="body-panel"></div>
     </body>
 </html>
