Make my CSS less awful

--- a/humans.html
+++ b/humans.html
@@ -22,7 +22,7 @@
                 <p>We often forget about the <b>human</b> component of software in the industry.</p>
                 <p>There are a lot of criticisms that tech is a self-perpetuating bubble and unfortunately it is certainly on its way there.</p>
                 <p>Things I try to bring to software:</p>
-                <ul>
+                <ul class="left-list">
                     <li><b>Communicate online like you would face to face<b></li>
                     <li><b>Acknowledge that we're all still learning<b></li>
                     <li><b>Diversity matters and starts with individual acceptance of difference<b></li>
