--- a/humans.html
+++ b/humans.html
@@ -20,8 +20,7 @@
             </a>
             <div class="center-panel">
                 <p>We often forget about the <b>human</b> component of software in the industry.</p>
-                <p>There are a lot of criticisms that tech is a self-perpetuating bubble and unfortunately it is certainly on its way there.</p>
-                <p>Things I try to bring to software:</p>
+                <p>In an effort to challenge the notion that software is only about the tech, these are the things I try to bring to my collaborations:</p>
                 <ul class="left-list">
                     <li><b>Communicate online like you would face to face<b></li>
                     <li><b>Acknowledge that we're all still learning<b></li>
