Update IRC bits and humans.txt

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             </a>
             <div class="center-panel">
                 <div class="contact-type">
-                    <p><b>Freenode IRC handle:</b></p>
+                    <p><b>Freenode and Mozilla IRC handle:</b></p>
                 </div>
                 <div class="contact-info">
                     <p>jbaublitzzz</p>
