--- a/humans.html
+++ b/humans.html
@@ -26,7 +26,7 @@
                     <li><b>Acknowledge that we're all still learning<b></li>
                     <li><b>Diversity matters and starts with individual acceptance of difference<b></li>
                     <li><b>When explaining, think back to when you were learning and explain it to yourself back then<b></li>
-                    <li><b>Empathy is learned and should be mutually practiced in interactions with collaborators<b></li>
+                    <li><b>Empathy is crucial and should be practiced mutually during interactions with collaborators<b></li>
                 </ul>
             </div>
         </div>
