Fix the sadness that was this webpage

--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,11 @@
         </div>
         <div class="body-panel"></div>
         <div class="center-panel-container body-panel">
-            <a href="index.html">
-                <h1>jbaublitz.me</h1>
-            </a>
+            <nav class="navigation">
+                <div><a href="index.html">Home</a></div>
+                <div><a href="humans.html">humans.txt</a></div>
+                <div><a href="contact.html">Contact</a></div>
+            </nav>
             <div class="center-panel">
                 <div class="contact-type">
                     <p><b>Freenode and Mozilla IRC handle:</b></p>
