--- a/humans.html
+++ b/humans.html
@@ -15,18 +15,20 @@
         </div>
         <div class="body-panel"></div>
         <div class="center-panel-container body-panel">
-            <a href="index.html">
-                <h1>jbaublitz.me</h1>
-            </a>
+            <nav class="navigation">
+                <div><a href="index.html">Home</a></div>
+                <div><a href="humans.html">humans.txt</a></div>
+                <div><a href="contact.html">Contact</a></div>
+            </nav>
             <div class="center-panel">
                 <p>We often forget about the <b>human</b> component of software in the industry.</p>
                 <p>In an effort to challenge the notion that software is only about the tech, these are the things I try to bring to my collaborations:</p>
                 <ul class="left-list">
-                    <li><b>Communicate online like you would face to face<b></li>
-                    <li><b>Acknowledge that we're all still learning<b></li>
-                    <li><b>Diversity matters and starts with individual acceptance of difference<b></li>
-                    <li><b>When explaining, think back to when you were learning and explain it to yourself back then<b></li>
-                    <li><b>Empathy is crucial and should be practiced mutually during interactions with collaborators<b></li>
+                    <li>Communicate online like you would face to face</li>
+                    <li>Acknowledge that we're all still learning</li>
+                    <li>Diversity matters and starts with individual acceptance of difference</li>
+                    <li>When explaining, think back to when you were learning and explain it to yourself back then</li>
+                    <li>Empathy is crucial and should be practiced mutually during interactions with collaborators</li>
                 </ul>
             </div>
         </div>
