--- a/index.html
+++ b/index.html
@@ -15,28 +15,18 @@
         </div>
         <div class="body-panel"></div>
         <div class="center-panel-container body-panel">
-            <a href="index.html">
-                <h1>jbaublitz.me</h1>
-            </a>
+            <nav class="navigation">
+                <div><a href="index.html">Home</a></div>
+                <div><a href="humans.html">humans.txt</a></div>
+                <div><a href="contact.html">Contact</a></div>
+            </nav>
             <div class="center-panel">
-                <h1>Hi there! Thanks for dropping by.</h1>
-                <h2>I'm John Baublitz</br>
-                and I do the open source thing.</h2>
-                <div class="padding"></div>
-                <h2>A little bit about me and my interests:</h2>
+                <div class="header-one">Hi there! Thanks for dropping by.</div>
+                <div class="header-two">I'm John Baublitz and I do the open source thing.</div>
+                <div class="header-two">A little bit about me and my interests:</div>
                 <p>I have been hacking on things since 2011. Feel free to poke around my Github for my open source personal projects and contributions. Some of the things I enjoy most are:</p>
-                <div class="interests">
-                    <div class="padding"></div>
-                    <div class="text">
-                        <p><b>open source, strong typing, network engineering, compiler and programming language work, working with operating systems, security, and writing tooling</b></p>
-                    </div>
-                    <div class="padding"></div>
-                </div>
-                <div class="links">
-                    <p>For my personal approach to being a human in tech, <a href="humans.html">click here</a>.</p>
-                </div>
-                <div class="links">
-                    <p>I can be reached personally through this <a href="contact.html">contact</a> link.</p>
+                <div class="text">
+                    <p>open source, strong typing, network engineering, compiler and programming language work, working with operating systems, security, and writing tooling</p>
                 </div>
             </div>
         </div>
