Update info and fonts to be awesome

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="index.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono">
+        <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC|Special+Elite&display=swap" rel="stylesheet">
         <title>Contact</title>
     </head>
     <body>
@@ -22,7 +21,7 @@
             </nav>
             <div class="center-panel">
                 <div class="contact-type">
-                    <p><b>Freenode and Mozilla IRC handle:</b></p>
+                    <p><b>Freenode IRC handle:</b></p>
                 </div>
                 <div class="contact-info">
                     <p>jbaublitzzz</p>
