--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="index.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono">
+        <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC|Special+Elite&display=swap" rel="stylesheet">
         <title>Homepage</title>
     </head>
     <body>
@@ -21,12 +20,24 @@
                 <div><a href="contact.html">Contact</a></div>
             </nav>
             <div class="center-panel">
-                <div class="header-one">Hi there! Thanks for dropping by.</div>
-                <div class="header-two">I'm John Baublitz and I do the open source thing.</div>
+                <div class="header-one">Hello and thanks for dropping by!</div>
+                <div class="header-two">I'm John Baublitz and I do a lot of open source work.</div>
                 <div class="header-two">A little bit about me and my interests:</div>
-                <p>I have been hacking on things since 2011. Feel free to poke around my Github for my open source personal projects and contributions. Some of the things I enjoy most are:</p>
-                <div class="text">
-                    <p>open source, strong typing, network engineering, compiler and programming language work, working with operating systems, security, and writing tooling</p>
+                <div class="body">
+                    <p>I have been hacking on things since 2011. Feel free to poke around my Github for my open source personal projects and contributions. Most of my time is divided between contributing to large open source projects and maintaining my own personal projects in the hopes that they may be useful to someone along the way</p>
+                    <p>Some of the areas I enjoy focusing on most are:</p>
+                    <div class="center-list">
+                        <ul>
+                            <li>strong typing</li>
+                            <li>working with and writing code for networking and network stacks</li>
+                            <li>digging into compilers and programming languages</li>
+                            <li>working with operating systems both in kernel space and user space</li>
+                            <li>learning more about hardware</li>
+                            <li>systems security</li>
+                            <li>sometimes writing tooling to make life easier for myself</li>
+                        <ul>
+                    </div>
+                    <p>Because of the domains I work in, I've gravitated mostly towards C, Python, and Rust to get things done.</p>
                 </div>
             </div>
         </div>
