--- a/humans.html
+++ b/humans.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="index.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono">
+        <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC|Special+Elite&display=swap" rel="stylesheet">
         <title>humans.txt</title>
     </head>
     <body>
@@ -21,8 +20,10 @@
                 <div><a href="contact.html">Contact</a></div>
             </nav>
             <div class="center-panel">
-                <p>We often forget about the <b>human</b> component of software in the industry.</p>
-                <p>In an effort to challenge the notion that software is only about the tech, these are the things I try to bring to my collaborations:</p>
+                <div class="body">
+                    <p>We often forget about the <b>human</b> component of software in the industry.</p>
+                    <p>In an effort to challenge the notion that software is only about the tech, these are the things I try to bring to my collaborations:</p>
+                </div>
                 <ul class="left-list">
                     <li>Communicate online like you would face to face</li>
                     <li>Acknowledge that we're all still learning</li>
@@ -30,6 +31,9 @@
                     <li>When explaining, think back to when you were learning and explain it to yourself back then</li>
                     <li>Empathy is crucial and should be practiced mutually during interactions with collaborators</li>
                 </ul>
+                <div class="body">
+                    <p>I work on a volunteer basis as part of a introductory systems education group at <a href="https://www.resilientcoders.org">Resilient Coders</a>. If you think diversity matters, click on the link and consider supporting an organization that's trying to make that happen in a real and actionable way!</p>
+                </div>
             </div>
         </div>
         <div class="body-panel"></div>
