Updated with more sad CSS

--- a/humans.html
+++ b/humans.html
@@ -21,7 +21,9 @@
             </nav>
             <div class="center-panel">
                 <div class="body">
-                    <p>We often forget about the <b>human</b> component of software in the industry.</p>
+                    <div class="summary">
+                        <p>We often forget about the <b>human</b> component of software in the industry.</p>
+                    </div>
                     <p>In an effort to challenge the notion that software is only about the tech, these are the things I try to bring to my collaborations:</p>
                 </div>
                 <ul class="left-list">
