--- a/template.html
+++ b/template.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="template.css">
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel="stylesheet" type="text/css" href="humans.css">
+        <link rel="stylesheet" type="text/css" href="contact.css">
         <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC|Special+Elite&display=swap" rel="stylesheet">
         <title></title>
     </head>
@@ -19,9 +20,9 @@
                 <div class="body-panel"></div>
                 <div class="center-panel-container body-panel">
                     <nav class="navigation">
-                        <div><a href="#" onclick="wasm_bindgen.choose_page('index');">Home</a></div>
-                        <div><a href="#" onclick="wasm_bindgen.choose_page('humans');">humans.txt</a></div>
-                        <div><a href="#" onclick="wasm_bindgen.choose_page('humans');">Contact</a></div>
+                        <div><a href="#" onclick="fadeOut('index');">Home</a></div>
+                        <div><a href="#" onclick="fadeOut('humans');">humans.txt</a></div>
+                        <div><a href="#" onclick="fadeOut('contact');">Contact</a></div>
                     </nav>
                     <div id="center-panel">
                     </div>
@@ -31,6 +32,16 @@
         </div>
 
         <script src="jbaublitz-me-wasm/pkg/jbaublitz_me_wasm.js"></script>
+        <script>
+            function fadeOut(page) {
+                var fio = document.getElementById("fadeinout");
+                fio.className = "body-panel-out";
+                fio.addEventListener('animationend', function() {
+                    wasm_bindgen.choose_page(page);
+                    this.className = "body-panel-in";
+                });
+            }
+        </script>
         <script type="module">
             async function run() {
                 await wasm_bindgen('./jbaublitz-me-wasm/pkg/jbaublitz_me_wasm_bg.wasm');
