Fix <a> vs <div> with text problem

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <div class="body-panel"></div>
                 <div class="center-panel-container body-panel">
                     <nav class="navigation">
-                        <div><a href="#" onclick="fadeOut('index');">Home</a></div>
-                        <div><a href="#" onclick="fadeOut('humans');">humans.txt</a></div>
-                        <div><a href="#" onclick="fadeOut('contact');">Contact</a></div>
+                        <div onclick="fadeOut('index');">Home</div>
+                        <div onclick="fadeOut('humans');">humans.txt</div>
+                        <div onclick="fadeOut('contact');">Contact</div>
                     </nav>
                     <div id="center-panel">
                     </div>
