--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="humans.css">
         <link rel="stylesheet" type="text/css" href="contact.css">
         <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC|Special+Elite&display=swap" rel="stylesheet">
-        <title>jbaublitz.me</title>
+        <title>John Baublitz</title>
     </head>
     <body>
         <div class="all">
