--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
                 <div class="header header-two">I'm John Baublitz and I do a lot of open source work.</div>
                 <div class="header header-two">A little bit about me and my interests:</div>
                 <div class="body">
-                    <p>I have been hacking on things since 2011. Feel free to poke around my Github for my open source personal projects and contributions. Most of my time is divided between contributing to large open source projects and maintaining my own personal projects in the hopes that they may be useful to someone along the way</p>
+                    <p>I have been hacking on things since 2011. Feel free to poke around my Github for my open source personal projects and contributions. Most of my time is divided between contributing to large open source projects and maintaining my own personal projects in the hopes that they may be useful to someone along the way.</p>
                     <p>Some of the areas I enjoy focusing on most are:</p>
                     <div class="center-list">
                         <ul>
                             <li>strong typing</li>
-                            <li>working with and writing code for networking and network stacks</li>
+                            <li>interfacing with network stacks</li>
                             <li>digging into compilers and programming languages</li>
                             <li>working with operating systems both in kernel space and user space</li>
-                            <li>learning more about hardware</li>
+                            <li>writing code that talks to hardware</li>
                             <li>systems security</li>
                             <li>sometimes writing tooling to make life easier for myself</li>
                         <ul>
@@ -71,25 +71,25 @@
                 <li>Empathy is crucial and should be practiced mutually during interactions with collaborators</li>
             </ul>
             <div class="body">
-                <p>I work on a volunteer basis as part of <a href="https://www.resilientcoders.org">Resilient Coders</a>. If you think diversity matters, click on the link and consider supporting an organization that's trying to make that happen in a real and actionable way!</p>
+                <p>If you think diversity in tech matters, consider supporting <a href="https://www.resilientcoders.org">Resilient Coders</a>, an organization that's trying to make that happen in a real and actionable way!</p>
             </div>
         </template>
 
         <template id="contact">
             <div class="contact-type">
-                <p><b>IRC handle:</b></p>
+                <p>IRC handle:</p>
             </div>
             <div class="contact-info">
                 <p>jbaublitzzz</p>
             </div>
             <div class="contact-type">
-                <p><b>Email:</b></p>
+                <p>Email:</p>
             </div>
             <div class="contact-info">
                 <p>john.m.baublitz@gmail.com</p>
             </div>
             <div class="contact-type">
-                <p><b>Github:</b></p>
+                <p>Github:</p>
             </div>
             <div class="contact-info">
                 <p><a href="https://github.com/jbaublitz">https://github.com/jbaublitz</a></p>
