--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <noscript>
+            <meta http-equiv="refresh" content="0; URL=home.html"/>
+        </noscript>
         <link rel="stylesheet" type="text/css" href="template.css">
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel="stylesheet" type="text/css" href="humans.css">
