--- a/humans.html
+++ b/humans.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="template.css">
         <link rel="stylesheet" type="text/css" href="humans.css">
         <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC|Special+Elite&display=swap" rel="stylesheet">
+        <title>John Baublitz</title>
     </head>
     <body>
         <div class="all">
