--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <noscript>
-            <meta http-equiv="refresh" content="0; URL=home.html"/>
-        </noscript>
         <link rel="stylesheet" type="text/css" href="template.css">
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel="stylesheet" type="text/css" href="humans.css">
@@ -20,7 +17,7 @@
                 </a>
                 <a id="banner-link-right" href="https://github.com/jbaublitz/jbaublitz-me">Website source code</a>
             </div>
-            <div id="fadeinout" hidden>
+            <div id="fadeinout" class="body-panel-in">
                 <div class="body-panel"></div>
                 <div class="center-panel-container body-panel">
                     <nav class="navigation">
@@ -29,6 +26,7 @@
                         <div onclick="fadeOut('contact');">Contact</div>
                     </nav>
                     <div id="center-panel">
+                        <p>If you have JavaScript disabled, <a href="home.html">click here!</a></p>
                     </div>
                 </div>
                 <div class="body-panel"></div>
@@ -121,8 +119,6 @@
             function run() {
                 choose_page('home');
                 var fio = document.getElementById("fadeinout");
-                fio.className = "body-panel-in";
-                fio.removeAttribute('hidden');
             }
 
             run();
