--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel="stylesheet" type="text/css" href="humans.css">
         <link rel="stylesheet" type="text/css" href="contact.css">
-        <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC|Special+Elite&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC|Special+Elite|Vollkorn+SC&display=swap" rel="stylesheet">
         <title>John Baublitz</title>
     </head>
     <body>
@@ -35,7 +35,7 @@
 
         <template id=home>
             <div id="center-panel-inner">
-                <div class="header header-one">Hello! Bonjour! Привіт!</div>
+                <div class="header header-one">Hello! Bonjour! <div class="cyrillic">Привет!</div></div>
                 <div class="header header-two">I'm John Baublitz and I do a lot of open source work.</div>
                 <div class="header header-two">A little bit about me and my interests:</div>
                 <div class="body">
