Update areas of interest on my website

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                     <p>Some of the areas I enjoy focusing on most are:</p>
                     <div class="center-list">
                         <ul>
+                            <li>storage</li>
                             <li>strong typing</li>
-                            <li>interfacing with network stacks</li>
-                            <li>digging into compilers and programming languages</li>
-                            <li>working with operating systems both in kernel space and user space</li>
-                            <li>writing code that talks to hardware</li>
+                            <li>network stacks</li>
+                            <li>compilers and programming languages</li>
+                            <li>working with operating systems in kernel space and user space</li>
                             <li>systems security</li>
                             <li>sometimes writing tooling to make life easier for myself</li>
                         <ul>
