--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
                 </nav>
                 <div id="center-panel">
                     <div id="center-panel-inner">
-                        <div class="header header-one">Hello! Bonjour! <div class="cyrillic">Привет!</div></div>
+                        <div class="header header-one">Hello! Bonjour! <div class="cyrillic">Привет! Привіт!</div></div>
                         <div class="header header-two">I'm John Baublitz and I do a lot of open source work.</div>
                         <div class="header header-two">A little bit about me and my interests:</div>
                         <div class="body">
