--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <template id=home>
             <div id="center-panel-inner">
-                <div class="header header-one">Hello! Bonjour! <div class="cyrillic">Привет!</div></div>
+                <div class="header header-one">Hello! Bonjour! <div class="cyrillic">Привет! Привіт!</div></div>
                 <div class="header header-two">I'm John Baublitz and I do a lot of open source work.</div>
                 <div class="header header-two">A little bit about me and my interests:</div>
                 <div class="body">
