Change color scheme

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
         <div class="all">
             <div class="banner">
                 <a id="banner-link-left" href="https://github.com/jbaublitz">
-                    <img src="GitHub-Mark-Light-64px.png">
+                    <img src="github-mark-white.png">
                 </a>
                 <a id="banner-link-right" href="https://github.com/jbaublitz/jbaublitz-me">Website source code</a>
             </div>
